# mortgage-assistant-ai

./: .gitignore  README.md
backend/: .env.example  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_init.py  0002_chat_turns.py  0003_documents.py  0004_eligibility.py  0005_chat_turn_role_varchar.py  0006_event_logs.py
backend/app/: __init__.py  main.py
backend/app/agents/: document_errors.py  intake_clarifications.py  intake_progress.py  intake_slots.py  orchestrator.py  state.py  tracing.py
backend/app/api/: auth.py  borrower_application.py  borrower_chat.py  deals.py  deps.py  documents.py  eligibility.py  extractions.py  messages.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/models/: __init__.py  borrower.py  chat.py  deal.py  deal_context.py  document.py  document_extraction.py  event_log.py  loan_application.py  message.py  user.py
backend/app/observability/: __init__.py  aws_backend.py  context.py  langsmith_backend.py  provider.py
backend/app/schemas/: agent_io.py  auth.py  borrower.py  chat.py  deal.py  deal_context.py  eligibility.py  llamaindex_income.py  loan_application.py  messages.py  user.py
backend/app/services/: approval_service.py  deals_service.py  document_event_hub.py  documents_service.py  (+3 more)
backend/evals/: README.md  __init__.py
backend/scripts/: diagnose_llamaindex.py  diagnose_textract.py  load_sample_docs.py  seed_synthetic.py  sync_eval_datasets.py
backend/tests/: conftest.py
(+148 files in other folders)
