[project]
name = "loan-officer-copilot"
version = "0.1.0"
description = "Mortgage Loan Officer & Borrower Copilot MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "email-validator>=2.2.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.2.1",
  "structlog>=24.1.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt>=3.2.0,<4.0.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "boto3>=1.34.0",
  "langchain-aws>=0.2.0",
  "langgraph>=0.2.0",
  "langsmith>=0.1.0",
  "llama-cloud>=2.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "types-requests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

